[package]
name = "evss"
version = "0.1.0"
authors = ["zhtluo <zhtluo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }

ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }

rand_core = { version = "0.5", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
