[package]
name = "evss"
version = "0.2.0"
authors = ["zhtluo <zhtluo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.2", default-features = false }
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-poly = { version = "0.2", default-features = false }
ark-poly-commit = { version = "0.2", default-features = false }

ark-std = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }

rand_core = { version = "0.5", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
